spec/golden/errors/internal_action.tn
ch = Channel(Int32).new
action = ch.receive_select_action
puts 1
